// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MailboxContainer should show list when elements finish loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      Toolbar
      <div
        class="main-area--withToolbar flex-item-fluid flex reset4print,false"
      >
        <div
          class="items-column-list scroll-if-needed scroll-smooth-touch"
        >
          List
        </div>
        <section
          class="view-column-detail p2 flex-item-fluid scroll-if-needed"
        >
          ConversationView
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    Toolbar
    <div
      class="main-area--withToolbar flex-item-fluid flex reset4print,false"
    >
      <div
        class="items-column-list scroll-if-needed scroll-smooth-touch"
      >
        List
      </div>
      <section
        class="view-column-detail p2 flex-item-fluid scroll-if-needed"
      >
        ConversationView
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MailboxContainer should show loader instead of list when elements loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      Toolbar
      <div
        class="main-area--withToolbar flex-item-fluid flex reset4print,false"
      >
        <div
          class="items-column-list scroll-if-needed scroll-smooth-touch"
        >
          <div
            class="flex flex-justify-center h100"
          >
            Loader
          </div>
        </div>
        <section
          class="view-column-detail p2 flex-item-fluid scroll-if-needed"
        >
          ConversationView
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    Toolbar
    <div
      class="main-area--withToolbar flex-item-fluid flex reset4print,false"
    >
      <div
        class="items-column-list scroll-if-needed scroll-smooth-touch"
      >
        <div
          class="flex flex-justify-center h100"
        >
          Loader
        </div>
      </div>
      <section
        class="view-column-detail p2 flex-item-fluid scroll-if-needed"
      >
        ConversationView
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
